@@ -21,6 +21,7 @@ All:
   Stieber)
 - Improved contrib/utils/convertrc parsing (David J. Cooke)
 - Fixed handling of URLs and filenames in wxFileSystem
+- Implemented alignment for wxGrid bool editor and renderer
 
 OLD CHANGES
 ===========
